fix: validate null page evidence elements